[gd_scene load_steps=9 format=2]

[ext_resource path="res://World/Tiles.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player_Components/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Saving Stuff/save_world.gd" type="Script" id=3]
[ext_resource path="res://Textures/World.gd" type="Script" id=4]
[ext_resource path="res://Load_Chunk.tscn" type="PackedScene" id=5]
[ext_resource path="res://Unload.tscn" type="PackedScene" id=6]
[ext_resource path="res://Textures/ChunkRevolve.gd" type="Script" id=7]
[ext_resource path="res://Textures/Tile_1.png" type="Texture" id=8]

[node name="World" type="Node2D"]
script = ExtResource( 4 )
game_save_class = ExtResource( 3 )

[node name="Tiles" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 21, 395 )
speed = 1500

[node name="Generate_Chunk" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Save_Chunk" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Update_Map" type="Timer" parent="."]
wait_time = 0.01

[node name="ChunkRevolve" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Chunk_Unload" parent="ChunkRevolve" instance=ExtResource( 6 )]
visible = false

[node name="Load_Chunk" parent="ChunkRevolve" instance=ExtResource( 5 )]
visible = false

[node name="Tile1" type="Sprite" parent="ChunkRevolve"]
visible = false
position = Vector2( 17, 16 )
texture = ExtResource( 8 )

[connection signal="timeout" from="Generate_Chunk" to="." method="_on_Load_Next_Chunk_timeout"]
[connection signal="timeout" from="Save_Chunk" to="." method="_on_Save_Chunk_timeout"]
[connection signal="timeout" from="Update_Map" to="." method="_on_Update_Map_timeout"]
[connection signal="timeout" from="Update_Map" to="ChunkRevolve/Chunk_Unload" method="_on_Update_Map_timeout"]
[connection signal="timeout" from="Update_Map" to="ChunkRevolve/Load_Chunk" method="_on_Update_Map_timeout"]
